# liftshare

./: .gitignore  CLAUDE.md  LICENSE  README.md  db-and-be-schema.md  docker-compose.yml  liftshare.sql
liftshare-api/: .env.example  Cargo.toml
liftshare-api/migrations/: 20260517092657_init-tables.sql
liftshare-api/src/: app.rs  db.rs  errors.rs  main.rs  settings.rs  state.rs
liftshare-api/src/models/: mod.rs  trips_api.rs  trips_db.rs
liftshare-api/src/repositories/: mod.rs  trip_repo.rs
liftshare-api/src/routes/: health.rs  mod.rs  trip_handlers.rs
