[package]
name = "liftshare-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
tracing = "0.1.44"
config = "0.15.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.4"
tracing-subscriber = "0.3.23"
utoipa = { version = "5.5.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }
uuid = { version = "1.23.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
chrono = { version = "0.4.44", features = ["serde"] }
geozero = { version = "0.15.1", features = ["with-postgis-sqlx", "with-geo"] }
geo-types = "0.7.19"
thiserror = "2.0.18"
reqwest = { version = "0.13.3", features = ["json", "query"] }
